--- a/Projects.Rmd
+++ b/Projects.Rmd
@@ -4,11 +4,11 @@ title: "Projects"
 
 Here's my interest. 
 
-## [The relationships between facial actions and emotional experiences]
+#### [The relationships between facial actions and emotional experiences]
 
 - Spontaneous facial expressions.
 - Facial feedback hypothesis. 
 
-## [Statistics]
+#### [Statistics]
 
 - This is my only hobby!
