--- a/about.Rmd
+++ b/about.Rmd
@@ -6,3 +6,7 @@ title: "About Me"
 
 - Shushi Namba
 
+#### [Education]
+
+M.A., Institute: Department of Psychology, Graduate school of Education, Hiroshima University, 2016
+B.A., Institute: Department of Psychology, Faculty of Education, Hiroshima University, 2014
