--- a/Documents.Rmd
+++ b/Documents.Rmd
@@ -4,7 +4,7 @@ title: "Documents"
 ---
 
 
-\`\`\`{r, echo = FALSE, fig.align='center'}
+```{r, echo = FALSE, fig.align='center'}
 library(zousan)
 embed_slide("https://www.slideshare.net/ShushiNamba/mental-model-for-emotion?ref=https://www.slideshare.net/ShushiNamba/slideshelf")
-\`\`\`
+```
