--- a/Achievement.Rmd
+++ b/Achievement.Rmd
@@ -2,9 +2,7 @@
 title: "Achievement"
 ---
 
-#### (Publications)
-[Refereed]
-
+#### (Publications)[Refereed]
 
 - Namba S, Russell K, S., Miyatani M & Nakao T. (2017).   Spontaneous facial actions map onto emotional experiences in a non-social context: towards a component-based approach. Frontiers in Psychology. https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5415601/
 
